resources/css/style.css
.top{
  background-image: url('/resources/images/bg1.png');
}

.top h1{
  font-weight: bold;
  font-size: 70px;
  color: white;
}

.top p{
  font-size: 18px;
  color: white;
}

body{
  text-align: center;
  font-family: Helvetica;
}

.process h2{
  font-size: 32px;
  font-weight: bold;
}

.process h3{
  font-size: 23px;
  font-weight: bold;
}

.process p{
  font-size: 14px;
}

.top h2{
  font-size: 23px;
  font-weight: bold;
  color: white;
}

.footer{
  font-size: 11px;
  color: white;
  background-color: dimgray;
  text-align: left;
}

.nav{
  color: white;
}

